added eruda to base page

--- a/login/index.html
+++ b/login/index.html
@@ -13,6 +13,8 @@
 	</head>
 
 	<body>
+		<script src="node_modules/eruda/eruda.min.js"></script>
+		<script>eruda.init();</script>
 		<script type="text/javascript" src="https://tjtolton.com/aws-sdk-2.551.0.min.js"></script>
 		<script onload="test();" type="text/javascript" src="script.js"></script>
 	</body>
